header distortion fixed

--- a/app/assets/stylesheets/_plans-details.sass
+++ b/app/assets/stylesheets/_plans-details.sass
@@ -81,7 +81,7 @@
   .section1
     text-align: left
     float: left
-    width: 275px
+    width: 282px
     li
       color: $grayDark
       line-height: 18px
